Fixes paper.jpg not showing on about page

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ footer {
 /* about */
 #about {
   min-height: 100vh;
-  background-image: url("/images/backgrounds/paper.jpg");
+  background-image: url("../images/backgrounds/paper.jpg");
 }
 
 .about-container:after {
